Finish lab 2 part 1

--- a/zook.conf
+++ b/zook.conf
@@ -3,11 +3,11 @@
     dir = /home/student/
     lxcbr = 0
     port = 8080
-    http_svcs = zookfs
+    http_svcs = dynamic, static
 
-[zookfs]
+[dynamic]
     cmd = zookfs
-    url = .*
+    url = /zoobar/index\.cgi/.*
     dir = /home/student/
     lxcbr = 1
     port = 8081
@@ -16,9 +16,19 @@
     ## filters applied are the ACCEPT ones, and then the REJECT one.
     ## Use `iptables -nvL INPUT' on the appropriate container to see all
     ## the filters that are in effect on that container.
-    # fwrule = -s main -j ACCEPT
-    # fwrule = -s echo -j ACCEPT
-    # fwrule = -j REJECT
+    fwrule = -s main -j ACCEPT
+    fwrule = -s echo -j ACCEPT
+    fwrule = -j REJECT
+
+[static]
+    cmd = zookfs
+    url = /zoobar\..*\.html
+    dir = /home/student/
+    lxcbr = 2
+    port = 8081
+    fwrule = -s main -j ACCEPT
+    fwrule = -s echo -j ACCEPT
+    fwrule = -j REJECT
 
 [echo]
     cmd = /zoobar/echo-server.py
