Finish lab 2 part 2

--- a/zook.conf
+++ b/zook.conf
@@ -18,6 +18,7 @@
     ## the filters that are in effect on that container.
     fwrule = -s main -j ACCEPT
     fwrule = -s echo -j ACCEPT
+    fwrule = -s auth -j ACCEPT
     fwrule = -j REJECT
 
 [static]
@@ -27,6 +28,15 @@
     lxcbr = 2
     port = 8081
     fwrule = -s main -j ACCEPT
+    fwrule = -s echo -j ACCEPT
+    fwrule = -j REJECT
+
+[auth]
+    cmd = /zoobar/auth-server.py
+    dir = /home/student
+    lxcbr = 3
+    port = 8081
+    fwrule = -s dynamic -j ACCEPT
     fwrule = -s echo -j ACCEPT
     fwrule = -j REJECT
 
