Finish lab 2 part 3

--- a/zook.conf
+++ b/zook.conf
@@ -19,6 +19,7 @@
     fwrule = -s main -j ACCEPT
     fwrule = -s echo -j ACCEPT
     fwrule = -s auth -j ACCEPT
+    fwrule = -s bank -j ACCEPT
     fwrule = -j REJECT
 
 [static]
@@ -37,6 +38,17 @@
     lxcbr = 3
     port = 8081
     fwrule = -s dynamic -j ACCEPT
+    fwrule = -s bank -j ACCEPT
+    fwrule = -s echo -j ACCEPT
+    fwrule = -j REJECT
+
+[bank]
+    cmd = /zoobar/bank-server.py
+    dir = /home/student
+    lxcbr = 4
+    port = 8081
+    fwrule = -s dynamic -j ACCEPT
+    fwrule = -s auth -j ACCEPT
     fwrule = -s echo -j ACCEPT
     fwrule = -j REJECT
 
