--- a/zook.conf
+++ b/zook.conf
@@ -20,6 +20,7 @@
     fwrule = -s echo -j ACCEPT
     fwrule = -s auth -j ACCEPT
     fwrule = -s bank -j ACCEPT
+    fwrule = -s profile -j ACCEPT
     fwrule = -j REJECT
 
 [static]
@@ -49,8 +50,15 @@
     port = 8081
     fwrule = -s dynamic -j ACCEPT
     fwrule = -s auth -j ACCEPT
+    fwrule = -s profile -j ACCEPT
     fwrule = -s echo -j ACCEPT
     fwrule = -j REJECT
+
+[profile]
+    cmd = /zoobar/profile-server.py
+    dir = /home/student
+    lxcbr = 5
+    port = 8081
 
 [echo]
     cmd = /zoobar/echo-server.py
